src/Samples/Common/Views/Errors/UnknownInnerControl.dothtml
@viewModel System.Object, mscorlib

<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
    <title>Hello from DotVVM!</title>
</head>
<body>

    <dot:ConfirmPostBackHandler Message="Confirmation 1" />

</body>
</html>
